S5C2: Petite modification au niveau des variables

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -61,8 +61,8 @@
     --couleur-galerie : hsl(var(--hu4), var(--s-couleur-arriere), 35%);
     --couleur-footer: hsl(var(--hu5),var(--s-couleur-arriere), 40%);
 
-    --couleur-lien: #333;
-    --couleur-lien-hover: #fff;
+    --couleur-lien: #fff;
+    --couleur-lien-hover: #333;
     --couleur-lien-visited: #a600ff;
 
     --couleur-lien-menu : #fff;
