--- a/style.css
+++ b/style.css
@@ -66,8 +66,8 @@ Ce thème a été développé dans le cadre du cours 4W4
   --couleur-evenement: hsl(var(--hu3), var(--s-couleur-arriere), 30%);
   --couleur-galerie: hsl(var(--hu4), var(--s-couleur-arriere), 35%);
   --couleur-footer: hsl(var(--hu5),var(--s-couleur-arriere), 40%);
-  --couleur-lien: #333;
-  --couleur-lien-hover: #fff;
+  --couleur-lien: #fff;
+  --couleur-lien-hover: #333;
   --couleur-lien-visited: #a600ff;
   --couleur-lien-menu: #fff;
   --couleur-lien-hover-menu: #333;
