--- a/sass/style.scss
+++ b/sass/style.scss
@@ -38,6 +38,8 @@ Ce thème a été développé dans le cadre du cours 4W4
 @import "entete";
 @import "footer";
 
+@import "gabarit/vague";
+
 
 /* ///////////////////////////////////////////////////////////////// */
 /* Class utile                                                       */
