--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -66,7 +66,7 @@
     --couleur-lien-visited: #a600ff;
 
     --couleur-lien-menu : #fff;
-    --couleur-lien-hover-menu: #333;
+    --couleur-lien-hover-menu: black;
     --couleur-lien-actuel-menu: grey;
 
     --couleur-bouton-linear-gradient-1: #31c5ff ;
@@ -74,5 +74,7 @@
     --couleur-dedans-blockquote:#f5f5f5;
 
     --couleur-reseaux-sociaux : white;
+
+    --couleur-arriere-vague: (var(--hu2), var(--s-couleur-arriere), 65%);
 
 }
