S5C2: Modification du read.me. J'essaye de faire en sorte que mon burger apparait devant, mais rien ne veut marcher

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -15,7 +15,10 @@ body {
     padding: 5rem;
   }
   
-  
+  .entete_menu{
+    z-index: 1;
+  }
+
   header, section {
     display: flex;
     justify-content: center;
