J'essaye juste de corriger mon truc pour que ça fonctionne en espérant que je puisse retourner à la normale. Je ne peux toujours pas voir mes modifications, même si je fais watchSass

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -15,8 +15,10 @@ body {
     padding: 5rem;
   }
   
-  .entete_menu{
-    z-index: 1;
+  .entete__menu, .entete__header{
+    flex : 0 1 1500px;
+    padding: 3rem 0 0 0 ;
+    position : relative;
   }
 
   header, section {
@@ -41,11 +43,6 @@ body {
     background-color: var(--couleur-arriere-entete);
     color: var(--couleur-entete);
     position: relative;
-  }
-  
-  .entete__header {
-    display: flex;
-    flex-direction: column;
   }
   
   blockquote {
