--- a/sass/composant/_menu.scss
+++ b/sass/composant/_menu.scss
@@ -1,69 +1,65 @@
-.menu-principal-container {
+/*
+<nav class="menu-principal-container">
+  <ul id="menu-principal" class="menu"><li id="menu-item-36" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-36"><a href="http://localhost:81/4w4-2024-gr2/2020/10/07/350-5n1-communication-et-dynamique-dune-equipe-de-travail-45h/">Communication</a></li>
+  <li id="menu-item-37" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-37"><a href="http://localhost:81/4w4-2024-gr2/2020/10/07/393-5e1-methodes-de-recherche-et-preparation-au-marche-du-travail-45h/">Méthodes de recherche</a></li>
+  <li id="menu-item-38" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-38"><a href="http://localhost:81/4w4-2024-gr2/2020/10/07/582-1j1-animation-et-interactivite-en-jeu-75h/">Animation en jeu</a></li>
+  <li id="menu-item-39" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-39"><a href="http://localhost:81/4w4-2024-gr2/2020/10/07/description-du-cours-582-1m1-creation-video/">Création vidéo</a></li>
+  <li id="menu-item-42" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-42"><a href="#accueil">Accueil</a></li>
+  <li id="menu-item-43" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-43"><a href="#galerie">Galerie</a></li>
+  <li id="menu-item-44" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-44"><a href="#evenement">Événement</a></li>
+</ul>
+</nav>
+*/
+.menu-principal-container { //nav
+  border :  1px solid #aaa;
   position: absolute;
-  top: 0;
-  left: 50px;
+  top:0;
+  left:50px;
   z-index: 2;
-
-  @media screen and (min-width: 768px) {
+  transform : translateX(-200%);
+  @media screen and (min-width:700px) {
     position: static;
-    transform: translateX(0);
-  }
+    transform : translateX(0);
+}
+}
+
+#menu-principal{ // ul
+display : flex;
+flex-direction: column;
+list-style-type: none;
+justify-content: flex-start;
+align-items: flex-start;
+@media screen and (min-width:700px) {
+flex-direction: row;
+justify-content: space-around;
+flex-wrap: wrap;
+}
+
+}
+.menu-item{ //li
+
+}
+
+.menu-item a{ //li a
+
 }
 
 
-#menu-principal {
-  display: flex;
-  flex-direction: column;
-  list-style-type: none;
-  justify-content: flex-start;
-  align-items: center;
-  background-color: var(--couleur-bouton-linear-gradient-2);
-
-  @media screen and (min-width: 768px) {
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-  }
-
-  flex: 0 1 100%;
-  padding: 5rem;
-  padding: 0;
-}
-
-
-.menu-item {
-  color: black;
-}
-
-
-.menu-item a {
-  text-decoration: none;
-  color: inherit;
-  padding: 10px;
-  display: block;
-}
-
-
-.menu-item a:hover {
-  background-color: lightgray;
-  border-radius: 5px;
-}
-
-#chk_burger {
-  display: none;
+#chk_burger{
+display: none;
 }
 
 #burger {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  @media screen and (min-width: 768px) {
-    display: none;
-  }
+display: block;
+position: absolute;
+top:0;
+left:0;
+@media screen and (min-width:700px) {
+  display : none;
 }
+}  
+
 
 #chk_burger:checked ~ .menu-principal-container {
-  transform: translateX(-100%);
+transform : translateX(0);
 }
