--- a/sass/base/_bouton.scss
+++ b/sass/base/_bouton.scss
@@ -1,25 +1,23 @@
 button.entete__button {
-    font-size: clamp(1.25rem, 0.2083rem + 3.3333vw, 2.5rem);
-    background-image: linear-gradient(90deg, var(--couleur-bouton-linear-gradient-1) , var(--couleur-bouton-linear-gradient-2) );
-    color: #fff;
-    padding: 12px 24px;
-    border: none;
-    border-radius: 5px;
+    background-image: linear-gradient(150deg, var(--couleur-bouton-linear-gradient-1), var(--couleur-bouton-linear-gradient-2));
+    font-size: clamp(1.5rem, 0.1458rem + 4.3333vw, 3.125rem);
+    border-radius: 10px;
+    border : 2ps solid   #555;
+    padding : 16px 24px;
+    margin: 20px;
+    transition : transform .1s;
+    transform: translateY(0);
+    font-weight: 600;
+    text-align : center;
     cursor: pointer;
-    transition: transform 0.3s ease;
-    transform: scale(1);
-
-    // button:hover
-    &:hover {
-        background-image: linear-gradient(90deg, var(--couleur-bouton-linear-gradient-2) , var(--couleur-bouton-linear-gradient-1) );
-        transform: scale(1.2);
+    &:hover{
+      background-image: linear-gradient(150deg, var(--couleur-bouton-linear-gradient-2), var(--couleur-bouton-linear-gradient-1));
+      box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+      transform: translateY(-6px);
     }
-
-    // Button:active
-    &:active{
-        background-image: black;
+    &:active {
+     transform: translateY(0);
+     background-color: white;
     }
-    
-}
-
+ }
 
