--- a/sass/composant/_carte.scss
+++ b/sass/composant/_carte.scss
@@ -1,18 +1,17 @@
 .section__cours {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap : 1rem;
 }
 
 .carte {
-    padding: 1.5rem;
+    padding : 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex: 1 1 25%;
-    background-color: hsl(var(--hu1), var(--s-couleur-arriere), 75%);
-    border-radius: 20px;
+    flex : 1 0 calc(1010px/4);
+    background-color: hsl(var(--hu1),var(--s-couleur-arriere),  75%);
 }
 
 .carte *{
