--- a/style.css
+++ b/style.css
@@ -84,6 +84,11 @@ Ce thème a été développé dans le cadre du cours 4W4
 /* ///////////////////////////////////////////////////////////////// */
 /*https://clamp.font-size.app/?config=eyJyb290IjoiMTYiLCJtaW5XaWR0aCI6IjUwMHB4IiwibWF4V2lkdGgiOiI5MDBweCIsIm1pbkZvbnRTaXplIjoiMTZweCIsIm1heEZvbnRTaXplIjoiNDhweCJ9*/
 /*https://developer.mozilla.org/en-US/docs/Web/CSS/clamp*/
+h1, h2, h3, h4, h5, h6 {
+  display: flex;
+  justify-content: center;
+}
+
 h1 {
   font-size: clamp(2rem, 2.075rem + 4vw, 5rem);
 }
@@ -145,13 +150,14 @@ a:visited {
 body {
   display: flex;
   flex-direction: column;
-  font-family: "Roboto", sans-serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   box-sizing: border-box;
 }
 
 .global {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .global > section, .global > footer {
@@ -159,13 +165,12 @@ body {
   padding: 5rem;
 }
 
-.entete__menu, .entete__header {
+.entete__menu {
   flex: 0 1 1500px;
-  padding: 3rem 0 0 0;
   position: relative;
 }
 
-header, section {
+header {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -206,6 +211,12 @@ blockquote {
 .accueil__section {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.accueil__section img {
+  margin-top: 20px;
+  width: 300px;
 }
 
 #galerie {
@@ -224,6 +235,7 @@ blockquote {
 .evenement__section {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 /* ///////////////////////////////////////////////////////////////// */
@@ -232,39 +244,26 @@ blockquote {
 .entete__header {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  padding-top: 3rem;
-  gap: 3rem;
 }
 
 .entete__header__texte {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  width: 100%;
-  background-image: url("../images/unity-logo-988A22E703-seeklogo.com.png");
+  background-image: url("images/unity-logo-988A22E703-seeklogo.com.png");
   background-repeat: no-repeat;
-  background-position: 50% 90%;
+  background-position: 100% 50%;
   background-size: content;
   text-align: center;
   gap: 2rem;
 }
 
-.entete__header__button {
-  text-align: center;
-  padding-bottom: 10rem;
-  width: 100%;
-}
-
 @media screen and (min-width: 1100px) {
   .entete__header__texte {
-    background-position: 100% 90%;
-    align-items: flex-start;
-  }
-  .entete__header__button {
-    text-align: left;
+    background-position: center center;
   }
 }
 #footer {
@@ -307,16 +306,6 @@ ul li {
 /* ///////////////////////////////////////////////////////////////// */
 /* Class utile                                                       */
 /* ///////////////////////////////////////////////////////////////// */
-.bgc-text {
-  background-color: rgba(255, 255, 255, 0.2);
-  padding: 15px 20px;
-}
-@media screen and (min-width: 900px) {
-  .bgc-text {
-    background-color: transparent;
-  }
-}
-
 /* ///////////////////////////////////////////////////////////////// */
 /* Les différents effets de la page                                  */
 /* ///////////////////////////////////////////////////////////////// */
