--- a/sass/_entete.scss
+++ b/sass/_entete.scss
@@ -1,10 +1,8 @@
 .entete__header {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    padding-top : 3rem;
-    gap : 3rem;
 }
 
 
@@ -12,35 +10,20 @@
 
     display : flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    width : 100%;
-    background-image: url("../images/unity-logo-988A22E703-seeklogo.com.png");
+    background-image: url("images/unity-logo-988A22E703-seeklogo.com.png");
     background-repeat: no-repeat;
-
-    background-position: 50% 90%;
-     background-size:content;
+    background-position: 100% 50%;
+    background-size:content;
     text-align: center;
     gap: 2rem;
 }
 
-.entete__header__button {
-    text-align: center;
-    padding-bottom: 10rem;
-    width : 100%;
-}
-
 @media screen and (min-width:1100px){
     .entete__header__texte{
-        background-position: 100% 90%;
-        align-items: flex-start;
-    }
-
-.entete__header__button {
-    text-align: left;
-
-}
-    
+        background-position: center center;
+    }    
 }
 
 
