--- a/sass/base/_h.scss
+++ b/sass/base/_h.scss
@@ -4,6 +4,12 @@
 /*https://developer.mozilla.org/en-US/docs/Web/CSS/clamp*/
 
 
+h1,h2,h3,h4,h5,h6{    
+    display: flex;
+    justify-content: center;
+}
+
+
 h1 {
     font-size: clamp(2rem, 2.075rem + 4vw, 5rem);
 }
