--- a/style.css
+++ b/style.css
@@ -299,7 +299,7 @@ ul {
   padding: 0;
 }
 
-ul li {
+footer ul li {
   margin-bottom: 8px;
 }
 
@@ -447,25 +447,32 @@ ul li {
 </nav>
 */
 .menu-principal-container {
+  display: flex;
+  justify-content: center;
   border: 1px solid #aaa;
   position: absolute;
   top: 0;
-  left: 50px;
+  left: center;
   z-index: 2;
+  width: 400px;
+  height: 400px;
+  background-color: lightblue;
+  transform: translateX(-200%);
+  transition: transform 0.3s ease; /* Add transition property for smooth animation */
 }
 @media screen and (min-width: 700px) {
   .menu-principal-container {
     position: static;
-    transform: translateX(0);
+    width: 100%;
   }
 }
 
 #menu-principal {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   list-style-type: none;
-  justify-content: flex-start;
-  align-items: flex-start;
 }
 @media screen and (min-width: 700px) {
   #menu-principal {
@@ -473,6 +480,10 @@ ul li {
     justify-content: space-around;
     flex-wrap: wrap;
   }
+}
+
+.menu-item a {
+  color: blue;
 }
 
 #chk_burger {
